<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="164dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/balon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/balon" />

    <EditText
        android:id="@+id/et_cantidad"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/cantidad_de_entradas"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#11279F"
        android:textColorHint="#101E68"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/siguiente"
        android:textColor="#FBC02D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cantidad"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/sp1"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:background="#918686"
        android:backgroundTint="#F3EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cantidad"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>